--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js", 
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf dist",       
+    "db:reset": "npm run clean && npm run build && npm start"
   },
   "keywords": [],
   "author": "",
